--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -104,8 +104,8 @@
                     android:clickable="true"
                     android:cursorVisible="false"
                     android:textSize="16sp"
-                    android:textColor="@color/text_primary"
-                    android:textColorHint="@color/text_hint"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/black"
                     android:completionThreshold="0" />
 
             </com.google.android.material.textfield.TextInputLayout>
