--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -192,7 +192,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:text="How to use the App ?"
+                            android:text="How to get Diagnosis ?"
                             android:textSize="16sp"
                             android:textColor="@color/white"
                             android:textStyle="bold"
